--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 #root {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100vh;
 }
 
 a {
@@ -36,7 +36,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  height: 100%;
+  /* height: 100%; */
 }
 
 h1 {
